# cplus-weekly-assignments

./: .gitignore  CMakeLists.txt  main.cpp  week1.cpp  week4.cpp
mix/generics/: generic.cpp
old_exams/dec_18/: ex01-library.cpp  ex01-main.cpp  ex02-library.cpp  ex03-library.cpp  ex04-library.cpp  ex04-library.h  ex04-main.cpp
old_exams/dec_19/: ex01-library.cpp  ex01-main.cpp  ex02-library.cpp  ex03-library.cpp  ex04-library.cpp  ex04-library.h
old_exams/dec_20/: CMakeLists.txt
old_exams/dec_20/ex01/: ex01-library.cpp  ex01-main.cpp
old_exams/dec_20/ex02/: ex02-library.cpp  ex02-main.cpp
old_exams/dec_20/ex03/: ex03-library.cpp  ex03-library.h  ex03-main.cpp
old_exams/dec_20/ex04/: ex04-library.cpp  ex04-library.h  ex04-main.cpp
old_exams/may_22/ex01/: ex01-library.cpp  ex01-main.cpp
old_exams/may_22/ex02/: ex02-library.cpp  ex02-main.cpp
old_exams/may_22/ex03/: ex03-library.cpp  ex03-main.cpp
old_exams/may_22/ex04/: ex04-library.cpp  ex04-library.h  ex04-main.cpp
week1/: week1.cpp
week10/: List.cpp  List.h
week11/: FibonacciTrees.cpp
week2/: factorization.cpp
week4/: part1_4.cpp  part2_4.cpp
week5/: Levenshtein.cpp  week5.cpp
week8/: shapes.cpp  shapes.h  week8.cpp
week9/: Levenshtein.cpp  Reverse.cpp  palindrome.cpp  week9.cpp
write_read_to_file/: generic.cpp  write_read_file.cpp
